# aoq-factory

./: .clineignore  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  example.env  pyproject.toml  set_env.bat
alembic/: env.py
alembic/versions/: 2025_11_09_initial.py  2025_11_11_initial.py  2025_12_01_.py
docs/: ui_design.md  workers_details.md  workers_system.md
server/: pyproject.toml
server/src/server/: config.py
shared/: pyproject.toml
shared/src/shared/database/: __init__.py  engine.py
src/aoq_factory/: app.py  config.py  deps.py  exc.py
src/aoq_factory/animeapi/: zlib_memoize.py
src/aoq_factory/animeapi/anidb/: __init__.py  page.py  tools.py
src/aoq_factory/animeapi/idsmoe/: __init__.py  tools.py
src/aoq_factory/animeapi/mal/: __init__.py  tools.py
src/aoq_factory/animeapi/shiki/: __init__.py  tools.py
src/aoq_factory/api/models/: anime.py  level.py  song.py  source.py  timing.py
src/aoq_factory/api/routes/: __init__.py  anime.py  level.py  song.py  source.py  timing.py
src/aoq_factory/app/: app.py
src/aoq_factory/app/routes/: __init__.py  anime.py  level.py  song.py  source.py  timing.py
src/aoq_factory/automation/workers/: songs_worker.py
src/aoq_factory/database/: connection.py  models.py
src/aoq_factory/services/: __init__.py  anime_service.py  exc.py  level_service.py  song_service.py  source_service.py  timing_service.py
src/server/: config.py
src/server/database/: connection.py
