[project]
name = "aoq-factory"
version = "0.1.0"
description = "anime opening quiz factory"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = [
    "server",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.14.4",
    "ty>=0.0.1a25",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "B",
    "Q",
    "I",
    "RUF",
    "FAST",
]
