[project]
name = "aoq-factory"
version = "0.1.0"
description = "anime opening quiz factory"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic[tz]>=1.17.1",
    "asyncpg>=0.30.0",
    "cachetools>=6.2.1",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.121.0",
    "orjson>=3.11.4",
    "pydantic-settings>=2.11.0",
    "sqlalchemy[asyncio]>=2.0.44",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.14.4",
    "ty>=0.0.1a25",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[project.scripts]
server = "aoq_factory.main:main"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "B",
    "Q",
    "I",
    "RUF",
    "FAST",
]

[tool.ruff]
line-length = 120

[tool.alembic]
output_encoding = "utf-8"
path_separator = "os"
script_location = "%(here)s/alembic"
file_template = "%%(year)d_%%(month).2d_%%(day).2d_%%(slug)s"
prepend_sys_path = [
    "."
]

[[tool.alembic.post_write_hooks]]
entrypoint = "ruff_format"
executable = "ruff"
name = "ruff_format"
options = "format REVISION_SCRIPT_FILENAME"
type = "exec"

[[tool.alembic.post_write_hooks]]
entrypoint = "ruff_check"
executable = "ruff"
name = "ruff_check"
options = "check --fix REVISION_SCRIPT_FILENAME"
type = "exec"
