[project]
name = "shared"
version = "0.1.0"
description = "shared utils for aoq-factory"
readme = "README.md"
authors = [
    { name = "Vasiliy Mozhaev", email = "mozhay2005@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
